# search-engine

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml
docs/: ENGINE.md  INDEXER.md  MONITORING.md  Notes.md  RANKING.md  SPIDER.md
migration/: schema.sql
services/: README.md
services/backlinks/: requirements.txt
services/backlinks/src/: idf.py  main.py  page_rank.py  utils.py
services/backlinksProcessor/src/: graph.py  main.py  pageRank.py  utils.py
services/engine/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  justfile  package-lock.json  package.json  tailwind.config.js
services/indexer/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
services/indexer/.sqlx/: query-7ea28ec31274ceb2d4c24527cf8042fd3a67cd98ef304988c6a37943982c2a20.json  query-dc81f4827d534c0871d1c213db9724aaca88124bc178399736467ee06d6a4f4a.json
services/indexer/src/: main.rs
services/indexer/src/core/: config.rs  indexer.rs  mod.rs  psql.rs  text_sink.rs
services/indexer/src/sink/: mod.rs  text_sink.rs
services/monitoring/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
services/monitoring/src/: app.ts  index.ts
services/monitoring/static/: index.html
services/query-engine/: .air.toml  go.mod  go.sum  justfile
services/query-engine/internal/: config.go  conifg.go  db.go  handler.go  ranking.go  run.go  spell-checker.go  types.go
services/ranking/: .env.example  Dockerfile  README.md  docker-compose.yml  justfile  requirements.txt
services/ranking/src/: idf.py  main.py  page_rank.py  psql.py
services/spider/: .env.example  .gitignore  Dockerfile  README.md  appLog.json  default.pgo  docker-compose.yml  go.mod  go.sum  justfile
(+116 files in other folders)
