[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
html5ever = "0.35.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls-ring-webpki", "uuid"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
anyhow = { version = "1.0", default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
# tracing = { version = "0.1", features = ["max_level_off"] }
# tracing-subscriber = { version = "0.3", features = ["fmt", "json", "ansi"] }
